# dune

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  dune.sh  dune.toml  go.mod  go.sum  install-dune-alias.sh  install-sand-alias.sh  justfile  mcp-servers.txt  omc-and-auth-setup.md  sand.sh  sand.toml
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: image.yml  release.yml
cmd/check-container-tooling/: main.go
cmd/dune/: main.go  main_test.go
cmd/rally/: main.go  main_test.go
cmd/sand/: main.go  main_test.go
cmd/sand-orch/: main.go  main_test.go
container/: Dockerfile  devcontainer.json
container/addons/: add-mailpit.sh  add-opencode.sh  add-pnpm.sh  add-redis.sh  add-rust.sh  manifest.tsv
container/base/: tooling.yaml
container/gear/: add-gemini.sh  add-go.sh  add-mailpit.sh  add-opencode.sh  add-playwright.sh  add-pnpm.sh  add-postgres.sh  add-python-uv.sh  add-redis.sh  add-rust.sh  add-tmux.sh  add-turbo.sh  boost-cli.sh  manifest.tsv
container/home/: .agent-shell-setup.sh
container/lib/: utils.sh
scripts/: build-dune.sh  build-sand.sh  check-container-tooling.sh  install-dune-alias.sh  install-sand-alias.sh
tools/sand-config/: README.md  go.mod  main.go  main_test.go  pyproject.toml
tools/sand-config/src/sand_config/: __init__.py
updated/: Dockerfile  add-omc.sh  addons-cli.sh  configure-claude.sh  configure-codex.sh  configure-git-gh.sh  devcontainer.json  init-firewall.sh  sand-poststart.sh  sand-privileged.sh  setup-agent-persist.sh
(+167 files in other folders)
